--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 	<br />
 
 	<div style="clear: both">
-		<textarea id="source" style="height: 80px;">Hello.</textarea>
-		<input type="button" value="Send" />
+		<textarea id="message" style="height: 80px;">Hello.</textarea>
+		<input type="button" id="sendMessage" value="Send" />
 	</div>
 
 	<div id="fullText" style="border: 1px solid #555555; height: 200px;"></div>
